

bin_PROGRAMS = input_strings
input_strings_SOURCES = input_strings.c
input_strings_LDADD = $(top_builddir)/src/libdynarr_static.la

input_strings_LIBS = $(CODE_COVERAGE_LIBS)
input_strings_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS) -I$(top_srcdir)/src -I$(top_srcdir)/vector/src
input_strings_CFLAGS = $(CODE_COVERAGE_CFLAGS)
input_strings_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)


